@@ -1,14 +1,12 @@
-﻿using Microsoft.Xna.Framework;
+﻿using IL.Terraria.GameContent;
+using Microsoft.Xna.Framework;
 using Microsoft.Xna.Framework.Graphics;
-using ReLogic.Text;
-using System.Drawing;
-using System.Numerics;
+using mushroommod.Dusts;
+using On.Terraria.GameContent;
+using System;
 using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
-using Rectangle = Microsoft.Xna.Framework.Rectangle;
-using Color = Microsoft.Xna.Framework.Color;
-using Vector2 = Microsoft.Xna.Framework.Vector2;
 
 namespace mushroommod.Items
 {
@@ -42,29 +40,12 @@ namespace mushroommod.Items
             Item.knockBack = 4.75f;
             Item.DamageType = DamageClass.Melee;
         }
-
-        // add PostDraw so it does it in swing mode too
-
-        public override void PostDrawInWorld(SpriteBatch spriteBatch, Microsoft.Xna.Framework.Color lightColor, Microsoft.Xna.Framework.Color alphaColor, float rotation, float scale, int whoAmI)
+        public override void MeleeEffects(Player player, Rectangle hitbox)
         {
-            // says this item is missing, what the fuck
-            Texture2D texture = (Texture2D)ModContent.Request<Texture2D>("Items/MoonlightGreatsword_Glow");
-            spriteBatch.Draw
-            (
-                texture,
-                new Vector2
-                (
-                    Item.position.X - Main.screenPosition.X + Item.width * 0.5f,
-                    Item.position.Y - Main.screenPosition.Y + Item.height - texture.Height * 0.5f + 2f
-                ),
-                new Rectangle(0, 0, texture.Width, texture.Height),
-                Color.White,
-                rotation,
-                texture.Size() * 0.5f,
-                scale,
-                SpriteEffects.None,
-                0f
-            );
+            Lighting.AddLight(new Vector2(hitbox.Width, hitbox.Height), (0f), (1.86f), (2.42f));
+
+            if (Main.rand.Next(2) == 0)
+                Dust.NewDust(new Vector2(hitbox.X, hitbox.Y), hitbox.Width / 2, hitbox.Height / 2 , ModContent.DustType<ElectricDust>());
         }
 
         public override void AddRecipes()
