@@ -1,0 +1,27 @@
+﻿using Terraria;
+using Terraria.ID;
+using Terraria.ModLoader;
+
+namespace mushroommod.Projectiles
+{
+    public class Moonlight_Projectile : ModProjectile
+    {
+        public override void SetStaticDefaults()
+        {
+            DisplayName.SetDefault("Moonlight Projectile");
+        }
+
+        public override void SetDefaults()
+        {
+            Projectile.arrow = true;
+            Projectile.width = 10;
+            Projectile.height = 10;
+            Projectile.aiStyle = ProjAIStyleID.Arrow; // or 1
+            Projectile.friendly = true;
+            Projectile.DamageType = DamageClass.Ranged;
+            AIType = ProjectileID.WoodenArrowFriendly;
+        }
+
+        // Additional hooks/methods here.
+    }
+}
